<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>workspace</artifactId>
    <groupId>com.sap.sailing</groupId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

	<artifactId>root</artifactId>
	<packaging>pom</packaging>

	<modules>
		<module>com.sap.sse.common</module>
		<module>com.sap.sse.mongodb</module>
		<module>com.sap.sse.gwt</module>
		<module>com.sap.sse.gwt.adminconsole</module>
		<module>com.sap.sse.datamining</module>
		<module>com.sap.sse.datamining.shared</module>
		<module>com.sap.sse.datamining.test</module>
		<module>com.sap.sse.security</module>
		<module>com.sap.sse.security.test</module>
		<module>com.sap.sse.security.ui</module>
		<module>com.sap.sse.security.userstore.mongodb</module>
		<module>com.sap.sailing.domain.common</module>
		<module>com.sap.sailing.domain.shared.android</module>
		<module>com.sap.sailing.domain</module>
		<module>com.sap.sailing.operationaltransformation</module>
		<module>com.sap.sailing.geocoding</module>
		<module>com.sap.sailing.datamining</module>
		<module>com.sap.sailing.datamining.shared</module>
		<module>com.sap.sailing.datamining.test</module>
		<module>com.sap.sailing.domain.persistence</module>
		<module>com.sap.sailing.domain.deckmanadapter</module>
		<module>com.sap.sailing.domain.deckmanadapter.test</module>
		<module>com.sap.sailing.domain.tractracadapter</module>
		<module>com.sap.sailing.domain.tractracadapter.persistence</module>
		<module>com.sap.sailing.domain.igtimiadapter</module>
		<module>com.sap.sailing.domain.igtimiadapter.persistence</module>
		<module>com.sap.sailing.domain.igtimiadapter.test</module>
		<module>com.sap.sailing.domain.racelogtrackingadapter</module>
		<module>com.sap.sailing.domain.racelogtrackingadapter.test</module>
		<module>com.sap.sailing.domain.racelogtrackingadapter.testsupport</module>
		<module>com.sap.sailing.domain.swisstimingadapter</module>
		<module>com.sap.sailing.domain.swisstimingadapter.persistence</module>
		<module>com.sap.sailing.domain.swisstimingreplayadapter</module>
		<module>com.sap.sailing.declination</module>
		<module>com.sap.sailing.udpconnector</module>
		<module>com.sap.sailing.expeditionconnector</module>
		<module>com.sap.sailing.server</module>
		<module>com.sap.sailing.server.gateway</module>
		<module>com.sap.sailing.server.gateway.ess40</module>
		<module>com.sap.sailing.server.gateway.serialization</module>
		<module>com.sap.sailing.server.replication</module>
		<module>com.sap.sailing.www</module>
		<module>com.sap.sailing.www.events</module>
		<module>com.sap.sailing.xmlexport</module>
		<module>com.google.gwt.osgi</module>
		<module>com.tractrac.clientmodule</module>
		<module>org.json.simple</module>
		<module>com.mongodb.driver</module>
		<module>com.googlecode.java-diff-utils</module>
		<module>com.googlecode.mgwt</module>
		<module>com.sap.sailing.feature</module>
		<module>org.moxieapps.gwt.highcharts</module>
		<module>com.sap.sailing.resultimport</module>
		<module>com.sap.sailing.kiworesultimport</module>
		<module>com.sap.sailing.ess40.resultimport</module>
		<module>com.sap.sailing.xrr.resultimport</module>
		<module>com.sap.sailing.freg.resultimport</module>
		<module>org.openqa.selenium.osgi</module>
		<module>com.sap.sailing.monitoring</module>
		<module>com.sap.sailing.nmeaconnector</module>
		<module>net.sf.marineapi</module>
		<module>net.sf.marineapi.test</module>
		<module>com.sap.sailing.simulator</module>
		<module>com.sap.sailing.server.trackfiles</module>
		<module>com.sap.sailing.feature.runtime</module>
		<module>com.sap.sailing.gwt.ui</module>
		<module>com.sap.sse.common.test</module>
		<module>com.sap.sailing.domain.test</module>
		<module>com.sap.sailing.domain.shared.android.test</module>
		<module>com.sap.sailing.operationaltransformation.test</module>
		<module>com.sap.sailing.geocoding.test</module>
		<module>com.sap.sailing.domain.swisstimingadapter.test</module>
		<module>com.sap.sailing.domain.swisstimingreplayadapter.test</module>
		<module>com.sap.sailing.declination.test</module>
		<module>com.sap.sailing.expeditionconnector.test</module>
		<module>com.sap.sailing.server.test</module>
		<module>com.sap.sailing.server.gateway.test</module>
		<module>com.sap.sailing.server.gateway.test.support</module>
		<module>com.sap.sailing.server.gateway.serialization.test</module>
		<module>com.sap.sailing.server.replication.test</module>
		<module>com.sap.sailing.gwt.ui.test</module>
		<module>com.sap.sailing.mongodb.test</module>
		<module>com.googlecode.java-diff-utils.test</module>
		<module>com.sap.sailing.kiworesultimport.test</module>
		<module>com.sap.sailing.ess40.resultimport.test</module>
		<module>com.sap.sailing.xrr.resultimport.test</module>
		<module>com.sap.sailing.freg.resultimport.test</module>
		<module>com.sap.sailing.barbados.resultimport</module>
		<module>com.sap.sailing.barbados.resultimport.test</module>
		<module>com.sap.sailing.velum.resultimport</module>
		<module>com.sap.sailing.velum.resultimport.test</module>
		<module>com.sap.sailing.sailwave.resultimport</module>
		<module>com.sap.sailing.sailwave.resultimport.test</module>
		<module>com.sap.sailing.manage2sail</module>
		<module>com.sap.sailing.manage2sail.resultimport</module>
		<module>com.sap.sailing.manage2sail.resultimport.test</module>
		<module>com.sap.sailing.nmeaconnector.test</module>
		<module>com.sap.sailing.simulator.test</module>
		<module>com.sap.sailing.server.trackfiles.test</module>
		<module>com.sap.sailing.selenium.test</module>
		<module>com.sap.sailing.autoload</module>
		<module>com.sap.sailing.feature.p2build</module>
	</modules>
	
	<properties>
		<tycho-version>0.21.0</tycho-version>
        
		<!--
          QUESTION: Which properties or settings are system dependent and differ across
                    different machines/environments?
          QUESTION: Can we move the system property -Dmongo.dbName to "parameters.mongodb"?
                    If so the IP of the host would be the same for all profiles.
		-->
        <parameters.common>
		  -Dfile.encoding=cp1252 -Dreplication.brokerURL=tcp://localhost:61615 -Dmongo.dbName=winddbTest -DspatialWind=true
        </parameters.common>
		<parameters.vm-settings>
          -ea -Xmx1024m -XX:PermSize=256m -XX:+UseG1GC
		</parameters.vm-settings>
		<parameters.tractrac>
          -Dtractrac.tunnel=true -Dtractrac.tunnel.host=localhost
		</parameters.tractrac>
		<parameters.mongodb>
          -Dmongo.host=localhost
		</parameters.mongodb>
        <parameters.debug>
          -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y 
        </parameters.debug>
        <!--
          "Forward declaration" for better readability. The actual value should be defined in the local settings.xml,
          because of the differences between the CI-Build and the local setup.
        -->
        <parameters.proxy>
        </parameters.proxy>
        <reportsdirectory>${project.build.directory}/surefire-reports</reportsdirectory>
        <skipTests>false</skipTests>
	</properties>

    <profiles>
        <profile>
            <id>no-debug.with-proxy</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <tycho.build.argLine>
		  ${parameters.common} ${parameters.vm-settings} ${parameters.proxy} ${parameters.tractrac} ${parameters.mongodb}
		</tycho.build.argLine>
            </properties>
        </profile>
        <profile>
            <id>no-debug.without-proxy</id>
            <properties>
                <tycho.build.argLine>
		  ${parameters.common} ${parameters.vm-settings}
		</tycho.build.argLine>
            </properties>
        </profile>
        <profile>
            <id>debug.with-proxy</id>
            <properties>
                <tycho.build.argLine>
		      ${parameters.common} ${parameters.vm-settings} ${parameters.proxy} ${parameters.debug}
		</tycho.build.argLine>
            </properties>
        </profile>
        <profile>
            <id>debug.without-proxy</id>
            <properties>
                <tycho.build.argLine>
                  ${parameters.common} ${parameters.vm-settings} ${parameters.debug}
		</tycho.build.argLine>
            </properties>
        </profile>
    </profiles>

	<build>
		<directory>bin</directory>
		<outputDirectory>bin</outputDirectory>
		<testOutputDirectory>bin</testOutputDirectory>

		<pluginManagement>
			<plugins>
				<plugin>
					<inherited>true</inherited>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>eclipse-test-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.16</version>
					<configuration>
						<reportsDirectory>${reportsdirectory}</reportsDirectory>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
				<resolver>p2</resolver>
              <target>
                <artifact>
					<groupId>${project.groupId}</groupId>
					<artifactId>${project.artifactId}</artifactId>
					<version>${project.version}</version>
					<classifier>../com.sap.sailing.targetplatform/definitions/race-analysis-p2-maven-central</classifier>
                </artifact>
              </target>
				<environments>
					<environment>
						<os>linux</os>
						<ws>gtk</ws>
						<arch>x86</arch>
					</environment>
					<environment>
						<os>linux</os>
						<ws>gtk</ws>
						<arch>x86_64</arch>
					</environment>
					<environment>
						<os>win32</os>
						<ws>win32</ws>
						<arch>x86</arch>
					</environment>
					<environment>
						<os>win32</os>
						<ws>win32</ws>
						<arch>x86_64</arch>
					</environment>
					<environment>
						<os>macosx</os>
						<ws>cocoa</ws>
						<arch>x86_64</arch>
					</environment>
				</environments>
			  </configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
				    <argLine>${tycho.build.argLine}</argLine>
					<excludes>
						<!-- Exclude inner classes -->
						<exclude>**/*$*</exclude>
					</excludes>
					<reportsDirectory>${reportsdirectory}</reportsDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho-version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>

    <extensions>
      <!-- Enabling the use of FTP -->
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh-external</artifactId>
         <version>1.0-beta-6</version>
      </extension>
    </extensions>

	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<aggregate>true</aggregate>
					<reportsDirectories>
						<reportsDirectory>${reportsdirectory}</reportsDirectory>
						<aggregate>true</aggregate>
					</reportsDirectories>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
